--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-<nav>
+<nav id="nav">
     <input type="checkbox" id="menuToggle">
     <label for="menuToggle" class="menu-toggle">
         <i class="fas fa-bars"></i>
