--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <p>Het menu heeft de volgende eigenschappen:</p>
         <ul>
             <li>Responsive;</li>
-            <li>het menu heeft een submenu;</li>
+            <li>Het menu heeft een submenu;</li>
             <li>Er zijn roll-overs;</li>
             <li>Voor mobile weergave kan het menu worden ve</li>
         </ul>
     </main>
+<script src="blijfOpPagina.js"></script>
 </body>
 </html>
